overflow fix

--- a/client/src/static/styles/components/main.scss
+++ b/client/src/static/styles/components/main.scss
@@ -5,5 +5,4 @@
   flex: 4;
   background-color: $black-500;
   color: white;
-  overflow-y: auto;
 }
