--- a/client/src/static/styles/components/topNav.scss
+++ b/client/src/static/styles/components/topNav.scss
@@ -1,7 +1,6 @@
 .top-nav {
   background-color: $light-bg;
   box-shadow: 0 0 10px 1px black;
-  margin-bottom: 30px;
 
   &__container {
     display: flex;
